--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -22,11 +22,11 @@
 # Author: Liang Ding
 #
 
-mail.user=b3log.solo@gmail.com
-mail.password=
+mail.user=zyj382566697@hotmail.com
+mail.password=hotmail123zaq
 mail.debug=false
-mail.smtp.host=smtp.gmail.com
-mail.smtp.port=587
+mail.smtp.host=smtp.live.com
+mail.smtp.port=25
 mail.smtp.socketFactory.class=javax.net.ssl.SSLSocketFactory
 mail.smtp.socketFactory.fallback=false
 mail.smtp.socketFactory.port=465
