--- a/pom.xml
+++ b/pom.xml
@@ -30,61 +30,6 @@
         </license>
     </licenses>
 
-    <developers>
-        <developer>
-            <id>DL88250@gmail.com</id>
-            <name>Liang Ding</name>
-            <email>DL88250@gmail.com</email>
-            <url>http://88250.b3log.org</url>
-            <roles>
-                <role>Lead</role>
-                <role>Initial Committer</role>
-            </roles>
-            <organization>B3log</organization>
-            <organizationUrl>http://b3log.org</organizationUrl>
-            <timezone>+8</timezone>
-        </developer>
-
-        <developer>
-            <id>LLY219@gmail.com</id>
-            <name>Liyuan Li</name>
-            <email>LLY219@gmail.com</email>
-            <url>http://vanessa.b3log.org</url>
-            <roles>
-                <role>Committer</role>
-            </roles>
-            <organization>B3log</organization>
-            <organizationUrl>http://b3log.org</organizationUrl>
-            <timezone>+8</timezone>
-        </developer>
-        
-        <developer>
-            <id>wmainlove@gmail.com</id>
-            <name>Liceng Yao</name>
-            <email>wmainlove@gmail.com</email>
-            <url>http://love.b3log.org</url>
-            <roles>
-                <role>Committer</role>
-            </roles>
-            <organization>B3log</organization>
-            <organizationUrl>http://b3log.org</organizationUrl>
-            <timezone>+8</timezone>
-        </developer>
-        
-        <developer>
-            <id>dongxu.wang@acm.org</id>
-            <name>Dongxu Wang</name>
-            <email>dongxu.wang@acm.org</email>
-            <url>http://dx.b3log.org</url>
-            <roles>
-                <role>Committer</role>
-            </roles>
-            <organization>B3log</organization>
-            <organizationUrl>http://b3log.org</organizationUrl>
-            <timezone>+8</timezone>
-        </developer>
-    </developers>
-
     <issueManagement>
         <system>GitHub Issues</system>
         <url>https://github.com/b3log/solo/issues</url>
@@ -170,12 +115,12 @@
             <version>${org.b3log.latke.version}</version>
         </dependency>
 
-        <dependency>
-            <groupId>org.testng</groupId>
-            <artifactId>testng</artifactId>
-            <version>${testng.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.testng</groupId> -->
+<!--             <artifactId>testng</artifactId> -->
+<!--             <version>${testng.version}</version> -->
+<!--             <scope>test</scope> -->
+<!--         </dependency> -->
 
         <dependency>
             <groupId>org.jsoup</groupId>
