--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -64,6 +64,7 @@
         <url-pattern>/admin-about.do</url-pattern>
         <url-pattern>/rm-all-data.do</url-pattern>
         <url-pattern>/fix/*</url-pattern>
+        <url-pattern>/pages/druid/monitor/*</url-pattern>
     </filter-mapping>
     <filter>
         <filter-name>PermalinkFilter</filter-name>
@@ -97,7 +98,33 @@
         <servlet-name>DispatcherServlet</servlet-name>
         <url-pattern>/*</url-pattern>
     </servlet-mapping>
-    
+    <!--druid 开始-->
+	<filter>
+	    <filter-name>druidWebStatFilter</filter-name>
+	    <filter-class>com.alibaba.druid.support.http.WebStatFilter</filter-class>
+	    <init-param>
+	      <param-name>exclusions</param-name>
+	      <!-- <param-value>/css/*,/images/*,/ext3/*,/attachFiles/*,*.js,*.css,/pages/druid/monitor/*</param-value> -->
+	      <param-value>*.js,*.gif,*.jpg,*.png,*.css,*.ico,/pages/druid/monitor/*</param-value>
+	    </init-param>
+  </filter>
+  <filter-mapping>
+    <filter-name>druidWebStatFilter</filter-name>
+    <url-pattern>*</url-pattern>
+  </filter-mapping>
+  <servlet>
+    <servlet-name>druidStatView</servlet-name>
+    <servlet-class>com.alibaba.druid.support.http.StatViewServlet</servlet-class>
+  	<init-param><!-- 禁用 Reset All 功能 -->
+        <param-name>resetEnable</param-name>
+        <param-value>false</param-value>
+    </init-param>
+  </servlet>
+  <servlet-mapping>
+    <servlet-name>druidStatView</servlet-name>
+    <url-pattern>/pages/druid/monitor/*</url-pattern>
+  </servlet-mapping>
+  
     <!-- Error Pages -->
     <error-page>
         <error-code>404</error-code>
