--- a/src/main/resources/mail.properties
+++ b/src/main/resources/mail.properties
@@ -23,7 +23,7 @@
 #
 
 mail.user=zyj382566697@hotmail.com
-mail.password=hotmail123zaq
+mail.password=xxxxxxx
 mail.debug=false
 mail.smtp.host=smtp.live.com
 mail.smtp.port=25
