--- a/pom.xml
+++ b/pom.xml
@@ -58,7 +58,7 @@
         <jsoup.version>1.5.2</jsoup.version>
         <markdownpapers-core.version>1.4.2</markdownpapers-core.version>
         <qiniu.version>7.0.4.1</qiniu.version>
-        <jetty.version>9.2.13.v20150730</jetty.version>
+        <jetty.version>9.2.14.v20151106</jetty.version>
         
         <!-- maven plugin -->
         <maven-compiler-plugin.version>3.3</maven-compiler-plugin.version>
@@ -75,21 +75,26 @@
     </properties>
 
     <dependencies>
-        <dependency>
-            <groupId>org.b3log</groupId>
-            <artifactId>latke</artifactId>
-            <version>${org.b3log.latke.version}</version>
-            <exclusions>
-                <exclusion>
-                    <groupId>com.jolbox</groupId>
-                    <artifactId>bonecp</artifactId>
-                </exclusion>
-                <exclusion>
-                    <groupId>com.alibaba</groupId>
-                    <artifactId>druid</artifactId>
-                </exclusion>
-            </exclusions>
+      	<dependency>
+            <groupId>org.eclipse.jetty</groupId>
+            <artifactId>jetty-webapp</artifactId>
+            <version>${jetty.version}</version>
         </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.b3log</groupId> -->
+<!--             <artifactId>latke</artifactId> -->
+<!--             <version>${org.b3log.latke.version}</version> -->
+<!--             <exclusions> -->
+<!--                 <exclusion> -->
+<!--                     <groupId>com.jolbox</groupId> -->
+<!--                     <artifactId>bonecp</artifactId> -->
+<!--                 </exclusion> -->
+<!--                 <exclusion> -->
+<!--                     <groupId>com.alibaba</groupId> -->
+<!--                     <artifactId>druid</artifactId> -->
+<!--                 </exclusion> -->
+<!--             </exclusions> -->
+<!--         </dependency> -->
         
         <dependency>
             <groupId>javax.servlet</groupId>
@@ -107,13 +112,19 @@
             <groupId>org.b3log</groupId>
             <artifactId>latke-repository-mysql</artifactId>
             <version>${org.b3log.latke.version}</version>
+<!--             <exclusions> -->
+<!--                 <exclusion> -->
+<!--                     <groupId>org.b3log</groupId> -->
+<!--                     <artifactId>latke</artifactId> -->
+<!--                 </exclusion> -->
+<!--             </exclusions> -->
         </dependency>
             
-        <dependency>
-            <groupId>org.b3log</groupId>
-            <artifactId>latke-repository-h2</artifactId>
-            <version>${org.b3log.latke.version}</version>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.b3log</groupId> -->
+<!--             <artifactId>latke-repository-h2</artifactId> -->
+<!--             <version>${org.b3log.latke.version}</version> -->
+<!--         </dependency> -->
 
 <!--         <dependency> -->
 <!--             <groupId>org.testng</groupId> -->
@@ -146,33 +157,27 @@
             <version>${qiniu.version}</version>
         </dependency>
         
-        <dependency>
-            <groupId>org.eclipse.jetty</groupId>
-            <artifactId>jetty-webapp</artifactId>
-            <version>${jetty.version}</version>
-        </dependency>
-        
         <!-- BEGIN: GAE related dependencies just for testing -->
-        <dependency>
-            <groupId>org.b3log</groupId>
-            <artifactId>latke-gae</artifactId>
-            <version>${org.b3log.latke.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>org.b3log</groupId> -->
+<!--             <artifactId>latke-gae</artifactId> -->
+<!--             <version>${org.b3log.latke.version}</version> -->
+<!--             <scope>test</scope> -->
+<!--         </dependency> -->
 
-        <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-api-stubs</artifactId>
-            <version>${gae.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.google.appengine</groupId> -->
+<!--             <artifactId>appengine-api-stubs</artifactId> -->
+<!--             <version>${gae.version}</version> -->
+<!--             <scope>test</scope> -->
+<!--         </dependency> -->
 
-        <dependency>
-            <groupId>com.google.appengine</groupId>
-            <artifactId>appengine-testing</artifactId>
-            <version>${gae.version}</version>
-            <scope>test</scope>
-        </dependency>
+<!--         <dependency> -->
+<!--             <groupId>com.google.appengine</groupId> -->
+<!--             <artifactId>appengine-testing</artifactId> -->
+<!--             <version>${gae.version}</version> -->
+<!--             <scope>test</scope> -->
+<!--         </dependency> -->
         <!-- END: GAE related dependencies just for testing -->
     </dependencies>
     
