--- a/src/main/resources/local.properties
+++ b/src/main/resources/local.properties
@@ -30,20 +30,11 @@
 #jdbc.URL=jdbc:h2:~/b3log_solo_h2/db
 #jdbc.pool=h2
 
-#### MySQL runtime ####
-#runtimeDatabase=MYSQL
-#jdbc.username=rv1g8y3ykb4oh0v7
-#jdbc.password=zaqzaq
-#jdbc.driver=com.mysql.jdbc.Driver
-#jdbc.URL=jdbc:mysql://rdsn2yeivqra7fy.mysql.rds.aliyuncs.com:3306/rv1g8y3ykb4oh0v7?useUnicode=yes&characterEncoding=UTF-8
-#jdbc.pool=c3p0
-
-
 runtimeDatabase=MYSQL
 jdbc.username=zaqzaq
 jdbc.password=zaqzaq
 jdbc.driver=com.mysql.jdbc.Driver
-jdbc.URL=jdbc:mysql://smp.freshz.cn:3306/b3log?useUnicode=yes&characterEncoding=UTF-8
+jdbc.URL=jdbc:mysql://192.168.0.102:3306/b3log?useUnicode=yes&characterEncoding=UTF-8
 jdbc.pool=druid
 # The minConnCnt MUST larger or equal to 3
 jdbc.minConnCnt=3
