--- a/src/main/webapp/WEB-INF/web.xml
+++ b/src/main/webapp/WEB-INF/web.xml
@@ -110,7 +110,7 @@
   </filter>
   <filter-mapping>
     <filter-name>druidWebStatFilter</filter-name>
-    <url-pattern>*</url-pattern>
+    <url-pattern>/*</url-pattern>
   </filter-mapping>
   <servlet>
     <servlet-name>druidStatView</servlet-name>
